--- a/src/App.css
+++ b/src/App.css
@@ -15,7 +15,7 @@
     --clr-dark: #303030;
     --clr-accent: #16e0bd;
 
-    --fs-h1: 3rem;
+    --fs-h3: 3rem;
     --fs-h2: 2.25rem;
     --fs-h3: 1.25rem;
     --fs-body: 1rem;
@@ -35,4 +35,25 @@
 
 body {
     background: var(--clr-light);
+    color: var(--clr-dark);
+    margin: 0;
+    font-family: var(--ff-primary);
+    font-size: var(--fs-body);
+    line-height: 1.6;
 }
+
+img {
+    display: block;
+    max-width: 100%;
+}
+
+/* typography */
+
+h1,h2,h3 {
+    line-height: 1.1;
+    margin: 0;
+}
+
+h1 {font-size: var(--fs-h1);}
+h2 {font-size: var(--fs-h2);}
+h3 {font-size: var(--fs-h3);}
