--- a/src/App.css
+++ b/src/App.css
@@ -1,37 +1,41 @@
-*, *::before, *::after {
+*,
+*::before,
+*::after {
     box-sizing: border-box;
 }
 
-/* custom properties */
+/* Custom Properties, update these for your own design */
 
 :root {
     --ff-primary: 'Source Sans Pro', sans-serif;
-    --ff-secondary: 'Source Code Pro' monospace;
-
+    --ff-secondary: 'Source Code Pro', monospace;
+    
     --fw-reg: 300;
     --fw-bold: 900;
-
+    
     --clr-light: #fff;
     --clr-dark: #303030;
     --clr-accent: #16e0bd;
-
-    --fs-h3: 3rem;
+    
+    --fs-h1: 3rem;
     --fs-h2: 2.25rem;
     --fs-h3: 1.25rem;
     --fs-body: 1rem;
+
+    --bs: 0.25em 0.25em 0.75em rgba(0,0,0,0.25),
+            0.125em 0.125em 0.25em rgba(0,0,0,.15);
 }
 
-
-@media (min-width: 800px){
+@media (min-width: 800px) {
     :root {
         --fs-h1: 4.5rem;
         --fs-h2: 3.75rem;
         --fs-h3: 1.5rem;
-        --fs-body: 1.25rem;       
+        --fs-body: 1.125rem;
     }
 }
 
-/* general styles */
+/* General styles */
 
 body {
     background: var(--clr-light);
@@ -42,21 +46,29 @@ body {
     line-height: 1.6;
 }
 
+section {
+    padding: 5em 2em;
+}
+
 img {
     display: block;
     max-width: 100%;
 }
 
-/* typography */
+strong { font-weight: var(--fw-bold) }
 
-h1,h2,h3 {
-    line-height: 1.1;
+/* Typography */
+
+h1,
+h2,
+h3 {
+    line-height: 1;
     margin: 0;
 }
 
-h1 {font-size: var(--fs-h1);}
-h2 {font-size: var(--fs-h2);}
-h3 {font-size: var(--fs-h3);}
+h1 { font-size: var(--fs-h1) }
+h2 { font-size: var(--fs-h2) }
+h3 { font-size: var(--fs-h3) }
 
 
 .section__title {
@@ -67,7 +79,7 @@ h3 {font-size: var(--fs-h3);}
     font-weight: var(--fw-reg);
 }
 
-.section__title--intro strong{
+.section__title--intro strong {
     display: block;
 }
 
@@ -79,5 +91,72 @@ h3 {font-size: var(--fs-h3);}
 .section__subtitle--intro,
 .section__subtitle--about {
     background: var(--clr-accent);
+    padding: .25em 1em;
     font-family: var(--ff-secondary);
+    margin-bottom: 1em;
 }
+
+
+/* header */
+
+nav { display: none; }
+
+/*  Intro section  */
+
+.intro {
+    position: relative;
+}
+
+.intro__img {
+    box-shadow: var(--bs);
+}
+
+@media (min-width: 600px) {
+    .intro {
+        display: grid;
+        width: min-content;
+        margin: 0 auto;
+        grid-column-gap: 1em;
+        grid-template-areas: 
+            "img title"
+            "img subtitle";
+        grid-template-columns: min-content max-content;
+    }
+    
+    .intro__img {
+        grid-area: img;
+        min-width: 250px;
+        position: relative;
+        z-index: 2;
+    }    
+    .section__subtitle--intro {
+        align-self: start;
+        grid-column: -1 / 1;
+        grid-row: 2;
+        text-align: right;
+        position: relative;
+        left: -1.5em;
+        width: calc(100% + 1.5em);
+    }
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
