--- a/src/App.css
+++ b/src/App.css
@@ -57,6 +57,28 @@ img {
 
 strong { font-weight: var(--fw-bold) }
 
+
+/* button */
+
+.btn {
+    display: inline-block;
+    padding: .5em 1.5em;
+    background: var(--clr-accent);
+    color: var(--clr-dark);
+    text-decoration: none;
+    cursor: pointer;
+    font-size: .8rem;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    font-weight: var(--fw-bold);
+    transition: transform 200ms ease-in-out;
+}
+
+.btn:hover {
+    transform: scale(1.1);
+}
+
+
 /* Typography */
 
 h1,
@@ -140,23 +162,45 @@ nav { display: none; }
     }
 }
 
+/* Featured Section */
 
 
+.my-services {
+    background-color: #787878;
+    background-image: url(../src/assets/images/services-bg.jpg);
+    background-size: cover;
+    background-blend-mode: multiply;
+    color: var(--clr-light);
+    text-align: center;
+    
+}
 
+.section__title--services {
+    color: var(--clr-accent);
+    position: relative;
+}
 
+.section__title--services::after {
+    content: '';
+    display: block;
+    width: 3em;
+    height: 1px;
+    margin: 0.5em auto 1em;
+    background-color: currentColor;
+    opacity: 0.35;
+}
 
+.service {
+    max-width: 500px;
+    margin: 0 auto;
+}
 
+@media (min-width: 800px){
+    .services {
+        display: flex;
+        max-width: 1000px;
+        margin: 0 auto;
+        gap: 2em;
+    }
 
-
-
-
-
-
-
-
-
-
-
-
-
-
+}
