--- a/src/App.css
+++ b/src/App.css
@@ -57,12 +57,17 @@ img {
 
 strong { font-weight: var(--fw-bold) }
 
+:focus {
+    outline: 3px solid var(--clr-accent);
+    outline-offset: 2px;
+}
+
 
 /* button */
 
 .btn {
     display: inline-block;
-    padding: .5em 1.5em;
+    padding: .5em 2.5em;
     background: var(--clr-accent);
     color: var(--clr-dark);
     text-decoration: none;
@@ -190,16 +195,22 @@ nav { display: none; }
     opacity: 0.35;
 }
 
+.services {
+    margin-bottom: 4em;
+}
+
 .service {
     max-width: 500px;
     margin: 0 auto;
+    
 }
 
 @media (min-width: 800px){
     .services {
         display: flex;
         max-width: 1000px;
-        margin: 0 auto;
+        margin-left: auto;
+        margin-right: auto;
         gap: 2em;
     }
 
