--- a/src/App.css
+++ b/src/App.css
@@ -290,7 +290,7 @@ nav { display: none; }
 
 .portfolio__img {
     transition: 
-        transform 750ms cubic-bezier(.5, 0, .5, 1),
+        transform 750ms cubic-bezier(.5, 0, .5, 1)
 }
 
 .portfolio__item:focus {
@@ -301,4 +301,45 @@ nav { display: none; }
 .portfolio__img:hover,
 .portfolio__item:focus .portfolio__img {
     transform: scale(1.2);  
+}
+
+/* footer */
+.footer {
+    background: #111;
+    color: var(--clr-accent);
+    text-align: center;
+    padding: 1.5em 0;
+    font-size: var(--fs-h3);
+}
+
+.footer a { 
+    color: inherit;
+    text-decoration: none;
+}
+
+.footer__link {
+    
+    font-weight: var(--fw-bold);
+}
+
+.footer__link:hover,
+.social-list__link:hover {
+    opacity: .7;
+}
+
+.footer__link:hover {
+    text-decoration: underline;
+}
+
+.social-list {
+    list-style: none;
+    display: flex;
+    justify-content: center;
+    margin: 1em 0 0;
+    padding: 0;
+    gap: 2rem
+}
+
+.social-list__link {
+    padding: .5em;
 }
