--- a/src/App.css
+++ b/src/App.css
@@ -57,10 +57,6 @@ img {
 
 strong { font-weight: var(--fw-bold) }
 
-:focus {
-    outline: 3px solid var(--clr-accent);
-    outline-offset: 2px;
-}
 
 
 /* button */
@@ -139,7 +135,8 @@ h3 { font-size: var(--fs-h3) }
 }
 
 .logo {
-    max-width: 100px;
+    max-width: 75px;
+    
 }
 
 .nav {
@@ -179,6 +176,71 @@ h3 { font-size: var(--fs-h3) }
 
 .nav__link:hover {
     color: var(--clr-accent);
+}
+
+
+.nav-toggle {
+    padding: .5em;
+    background: transparent;
+    border: 0;
+    cursor: pointer;
+    position: absolute;
+    right: 2em;
+    top: 2em;
+    z-index: 1000;
+}
+/* when the nav-open class is toggled on the body, nav gets shown/hidden */
+.nav-open .nav {
+    transform: translateX(0);
+}
+/* sets my nav-toggle to be fixed when the menu is open */
+.nav-open .nav-toggle {
+    position: fixed;
+}
+
+
+/* hamburger */
+
+.nav-open .hamburger {
+    transform: rotate(.625turn);
+}
+
+.nav-open .hamburger::before {
+    transform: rotate(90deg) translateX(-6px);
+}
+
+.nav-open .hamburger::after {
+    opacity: 0;
+}
+
+.hamburger {
+    display: block;
+    position: relative;
+}
+.hamburger,
+.hamburger::before,
+.hamburger::after {
+    background: var(--clr-accent);
+    width: 2em;
+    height: 3px;
+    border-radius: 1em;
+    transition: transform 250ms ease-in-out;
+    
+}
+.hamburger::before,
+.hamburger::after {
+    content: '';
+    position: absolute;
+    left: 0;
+    right: 0;
+}
+
+.hamburger::before {
+    top: 6px;
+}
+
+.hamburger::after {
+    bottom: 6px;
 }
 
 
